# stalkgateway-go

./: .gitignore  Dockerfile  Procfile  README.md  azure-pipelines.yaml  doc_api.go  go.mod  go.sum  main.go  makefile  pip-freeze.txt  revive.toml  setup.cfg  tools.go
aws-app/: dockerrun.aws.json
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: godoc-root.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  redoc.html
protogen/stalk_proto/: forecaster.pb.go  forecaster.pb.gw.go  models.pb.go  reporter.pb.go  reporter.pb.gw.go
service/: service_test.go  startServers.go
service/servers/: loadSettings.go  monitor.go  rest.go
zdevelop/make_scripts/: make_test.py
zdocs/source/: conf.py  index.rst
zdocs/source/_static/: godoc-root.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  godoc.7.html  godoc.8.html  proto.html  redoc.html
zdocs/source/stalk_proto/: forecaster.swagger.json
zdocs/source/swagger/: gateway.swagger.json
